app/manifests/pgadmin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: default
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
