app/manifests/pgadmin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: ci
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${ingress_host}
      secretName: tls
  rules:
    - host: ${ingress_host}
      http:
        paths:
          - pathType: Prefix
            path: "/pgadmin/*"
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 443
